<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
                name="viewmodel"
                type="com.ed.mygithub.login.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/textView"
                style="@style/LoginTitleText"
                android:text="@string/login_text_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/UnauthorizedText"
                android:text="@string/unauthorized_text"
                android:visibility="@{viewmodel.unauthorized ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textView"/>


        <EditText
                android:id="@+id/username"
                style="@style/LoginFields"
                android:inputType="textPersonName"
                android:hint="@string/account_hint"
                android:text="@={viewmodel.account}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <EditText
                android:id="@+id/password"
                style="@style/LoginFields"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:text="@={viewmodel.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"/>
        <Button
                android:id="@+id/login_button"
                android:text="@string/login_text_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="@{(v) -> viewmodel.login()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
                android:id="@+id/progress_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textView"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>